Migracion de logica para dejar de usar el microtransaction